<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/settings_title"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/teal"
                android:text="@string/setting_1"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/teal"
                android:text="@string/setting_2"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/check3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/teal"
                android:text="@string/setting_3"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="15dp"
        android:background="@drawable/btn_teal"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>
